--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -4,6 +4,8 @@
 <head>
     <title>{% block title %}{% endblock %}</title>
     <link href="{% static "css/blog.css" %}" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Tangerine">
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Lobster">
 </head>
 <body>
     <div id="content">
