--- a/blog/templates/blog/post/list.html
+++ b/blog/templates/blog/post/list.html
@@ -3,9 +3,9 @@
 {% block title %}Dave's Blog{% endblock %}
 
 {% block content %}
-    <h1>Dave's Blog</h1>
+    <h1 class="font-effect-fire-animation">Dave's Blog</h1>
     {% for post in posts %}
-        <h2><a href="{{ post.get_absolute_url }}">{{ post.title }}</a></h2>
+        <h2><a href="{{ post.get_absolute_url }}" target="_blank">{{ post.title }}</a></h2>
         <p class="date">Published {{ post.publish }} by {{ post.author }}</p>
         {{ post.body|truncatewords:30|linebreaks }}
     {% endfor %}
